# control-systems

books/Feedback Systems: An Introduction for Scientists and Engineers - Murray - Aström/: hts-log.txt  index.html
books/Feedback Systems: An Introduction for Scientists and Engineers - Murray - Aström/fbswiki.org/downloads/: fbs-modeling_24Jul2020.html
books/Feedback Systems: An Introduction for Scientists and Engineers - Murray - Aström/fbswiki.org/wiki/index.php/: 12_Mar_2023__A_new_version_of_the_Optimization-Based_Control_(OBC)_supplem  16_Nov_2024__Python_figure_sources_updated_for_python-control_v0.10.8.dela  24_Jul_2020__Copyedited_version_of_FBS2e_now_available_for_download.a.dela  28_Aug_2021__Links_to_first_edition_supplemental_information_added_to_chap  30_Oct_2020__Notes_on_Linear_Systems_Theory_updated_(release_0.2.10e.delay  Architecture_and_System_Design.html  Bibliography.html  Bicycle.html  Bicycle_dynamics.html  Biomolecular_Feedback_Systems.html  Category_Announcements.html  Category_Chapter.html  Category_Errata.html  Category_Exercises.html  Category_Figures.html  Category_Lectures.html  Category_Questions.html  Category_Releases.html  Category_Running_examples.html  Congctrl.html  Congestion_control.html  Cruise.html  Cruise_control.html  Domitilla_Del_Vecchio.html  Dynamic_Behavior.html  Errata.html  Errata__Example_8.html  (+209 more)
books/Feedback Systems: An Introduction for Scientists and Engineers - Murray - Aström/hts-cache/: new.lst  new.txt
courses/ap_monitor/: pyproject.toml
courses/ap_monitor/class01/: gekko_exercises.py  odeint_exercises.py
(+660 files in other folders)
