[project]
name = "ap-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Woodtli",email = "woodtli.lukas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy (>=1.16.0,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "gekko (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
